# live-bootcamp-project

./: README.md  compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/: Cargo.toml  Dockerfile
app-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile  api_schema.yml
auth-service/.sqlx/: query-bc9f193084182e230a3754d0bfc3f7b3d7ce6049dec9a39642bd57bee49a8a5a.json
auth-service/migrations/: 20250822195650_create_users_table.down.sql  20250822195650_create_users_table.up.sql
auth-service/src/: lib.rs  main.rs
auth-service/src/app_state/: mod.rs
auth-service/src/domain/: data_store.rs  email.rs  email_client.rs  errors.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  moc_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_store/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
